--- a/src/app/dashboard-layout/dashboard.component.html
+++ b/src/app/dashboard-layout/dashboard.component.html
@@ -1,3 +1,8 @@
-<app-sidebar></app-sidebar>
-<app-header></app-header>
-<router-outlet></router-outlet>
+<app-sidebar (toggleSidebar)="handleToggleSidebar($event)"></app-sidebar>
+<app-loader *ngIf="isLoading"></app-loader>
+<section class="header" [ngClass]="status ? 'open' : ''">
+  <app-dashboard-header class="headermain" [ngClass]="status ? 'open' : ''"></app-dashboard-header>
+  <div class="container-fluid mt-3">
+    <router-outlet></router-outlet>
+  </div>
+</section>
