--- a/src/app/featured-layout/featured.component.html
+++ b/src/app/featured-layout/featured.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
 <app-loader *ngIf="isLoading"></app-loader>
-<router-outlet></router-outlet>
+<div class="container-fluid container-mt-5">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
