--- a/src/app/shared/app-loader/app-loader.component.html
+++ b/src/app/shared/app-loader/app-loader.component.html
@@ -1,5 +1,6 @@
 <div class="loader-container">
-  <div class="loader">
-    <div class="loader-text">Loading<span>.</span><span>.</span><span>.</span></div>
-  </div>
+  <!-- <div class="loader"> -->
+    <!-- <div class="loader-text">Loading<span>.</span><span>.</span><span>.</span></div> -->
+    <span class="loader"></span>
+  <!-- </div> -->
 </div>
