--- a/src/app/shared/featured/header/header.component.css
+++ b/src/app/shared/featured/header/header.component.css
@@ -11,6 +11,13 @@
   height: 2.99em;
 }
 
+header {
+  position: absolute;
+  top: 0;
+  z-index: 100;
+  width: 100%;
+}
+
 .header-fixed {
   z-index: 1000;
   position: fixed;
@@ -33,8 +40,18 @@
   height: 5em !important;
 }
 
-header .nav-links a.router-link-active {
-  color: var(--app-secondary-color);
+.nav-links a {
+  color: var(--color-white);
+  transition: 0.2s all ease-in-out;
+}
+
+.header-fixed.show .nav-links a {
+  color: var(--app-dark-theme);
+}
+
+header .nav-links a.router-link-active,
+.nav-links a:hover {
+  color: var(--app-secondary-color) !important;
 }
 
 .nav-right-button li a {
