--- a/src/app/website/home/home.component.html
+++ b/src/app/website/home/home.component.html
@@ -194,7 +194,7 @@
   <!-- ========== Booking Form Section Ends Here========== -->
 
   <!-- ========== Room Section start Here========== -->
-  <section class="room padding-top padding-bottom bg--section-color">
+  <section class="room padding-top padding-bottom">
 
     <!-- meadows suite 150 rooms -->
     <div class="container">
@@ -834,132 +834,6 @@
 
 
 
-  <!-- ========== Service Section start Here========== -->
-  <section class="service padding-top padding-bottom bg--section-color">
-    <div class="container">
-      <div class="section-header" data-aos="fade-up" data-aos-duration="1000">
-        <div class="section-header__content">
-          <h2>Meadows Suites Hotel Services</h2>
-          <p>Continually productize compelling quality for packed in business consulting elated
-            Setting up to website and creating pages.
-          </p>
-        </div>
-      </div>
-      <div class="service__wrapper service__wrapper--home1" data-aos="fade-up" data-aos-duration="1000"
-        data-aos-delay="100">
-        <div class="service__slider swiper">
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="service__item1">
-                <div class="service__item1-inner">
-                  <div class="service__item1-thumb">
-                    <img src="../../../../assets/images/service/1.png" alt="service image">
-                  </div>
-                  <div class="service__item1-content">
-                    <div class="common-header">
-                      <p class="subtitle">Experience For The Senses</p>
-                      <h3>Relaxing Moment At Spa
-                        Center</h3>
-                    </div>
-                    <p>Continually productize compelling quality for packed in consulting
-                      productize compelling quality for all packed in with growth from
-                      Setting up to website and creating pages.
-                    </p>
-                    <ul class="service__aminities">
-                      <li class="service__aminities-item">
-                        <div class="service__aminities-name">
-                          <span><i class="fa-regular fa-circle-check"></i></span>
-                          <h5>Facial Care</h5>
-                        </div>
-                        <p class="service__aminities-value">
-                          30 minutes/ per day
-                        </p>
-                      </li>
-                      <li class="service__aminities-item">
-                        <div class="service__aminities-name">
-                          <span><i class="fa-regular fa-circle-check"></i></span>
-                          <h5>Body Massage</h5>
-                        </div>
-                        <p class="service__aminities-value">
-                          60 minutes/ per day
-                        </p>
-                      </li>
-                      <li class="service__aminities-item">
-                        <div class="service__aminities-name">
-                          <span><i class="fa-regular fa-circle-check"></i></span>
-                          <h5>Aroma Therapy</h5>
-                        </div>
-                        <p class="service__aminities-value">
-                          20 minutes/ per day
-                        </p>
-                      </li>
-                    </ul>
-                    <a href="#" class="custom-btn"><span>View More</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="swiper-slide">
-              <div class="service__item1">
-                <div class="service__item1-inner">
-                  <div class="service__item1-thumb">
-                    <img src="../../../../assets/images/service/1.png" alt="service image">
-                  </div>
-                  <div class="service__item1-content">
-                    <div class="common-header">
-                      <p class="subtitle">Experience For The Senses</p>
-                      <h3>Relaxing Moment At Spa
-                        Center</h3>
-                    </div>
-                    <p>Continually productize compelling quality for packed in consulting
-                      productize compelling quality for all packed in with growth from
-                      Setting up to website and creating pages.
-                    </p>
-                    <ul class="service__aminities">
-                      <li class="service__aminities-item">
-                        <div class="service__aminities-name">
-                          <span><i class="fa-regular fa-circle-check"></i></span>
-                          <h5>Facial Care</h5>
-                        </div>
-                        <p class="service__aminities-value">
-                          30 minutes/ per day
-                        </p>
-                      </li>
-                      <li class="service__aminities-item">
-                        <div class="service__aminities-name">
-                          <span><i class="fa-regular fa-circle-check"></i></span>
-                          <h5>Body Massage</h5>
-                        </div>
-                        <p class="service__aminities-value">
-                          60 minutes/ per day
-                        </p>
-                      </li>
-                      <li class="service__aminities-item">
-                        <div class="service__aminities-name">
-                          <span><i class="fa-regular fa-circle-check"></i></span>
-                          <h5>Aroma Therapy</h5>
-                        </div>
-                        <p class="service__aminities-value">
-                          20 minutes/ per day
-                        </p>
-                      </li>
-                    </ul>
-                    <a href="#" class="custom-btn"><span>View More</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="service__slider-prev"><i class="fa-solid fa-arrow-left"></i></div>
-        <div class="service__slider-next"><i class="fa-solid fa-arrow-right"></i></div>
-      </div>
-    </div>
-  </section>
-  <!-- ========== Service Section ends Here========== -->
-
-
-
 
 
   <!-- ========== Popular Room Section start Here========== -->
@@ -967,7 +841,7 @@
     <div class="container">
       <div class="section-header" data-aos="fade-up" data-aos-duration="1000">
         <div class="section-header__content">
-          <h2>Meadows Suites Hotel Popular Rooms & Suites.</h2>
+          <h2>Decor Vista Popular Designers</h2>
           <p>Continually productize compelling quality for packed in business consulting elated
             Setting up to website and creating pages.
           </p>
@@ -979,7 +853,7 @@
             <div class="room__item room__item--style2">
               <div class="room__item-inner">
                 <div class="room__item-thumb">
-                  <img src="../../../../assets/images/room/home1/1.png" alt="room image">
+                  <img src="../.././../assets/images/service/1.png" alt="room image">
                 </div>
                 <div class="room__item-content">
                   <div class="room__item-header">
@@ -1106,7 +980,7 @@
 
 
   <!-- ========== Testimonial Section start Here========== -->
-  <section class="testimonial testimonial--shape bg--section-color">
+  <section class="testimonial testimonial--shape">
     <div class="container-fluid px-0">
       <div class="testimonial__wrapper">
         <div class="row g-0">
