--- a/src/app/website/signin/signin.component.html
+++ b/src/app/website/signin/signin.component.html
@@ -19,15 +19,15 @@
           <div class="col-12 my-3">
             <mat-form-field appearance="outline" class="booking__form-inputgroup w-100">
               <mat-label>Password</mat-label>
-              <input matInput type="password" formControlName="password">
-              <mat-error *ngIf="signInForm.controls['password'].hasError('required')">
+              <input matInput type="password" formControlName="userPassword">
+              <mat-error *ngIf="signInForm.controls['userPassword'].hasError('required')">
                 Password is required
               </mat-error>
             </mat-form-field>
           </div>
         </div>
         <button color="primary" class="custom-btn mt-40 w-100" type="submit" [disabled]="signInForm.invalid">
-          <span>Submit Now</span>
+          <span>Sigin In</span>
         </button>
       </form>
     </div>
