--- a/src/app/shared/dashboard/dashboard-header/dashboard-header.component.html
+++ b/src/app/shared/dashboard/dashboard-header/dashboard-header.component.html
@@ -8,7 +8,7 @@
         </li>
         <li>
           <button mat-icon-button matTooltip="Notifications" [matMenuTriggerFor]="notificationMenu">
-            <mat-icon class="font-medium color-white">notifications_none</mat-icon>
+            <mat-icon class="font-mat-icon color-white">notifications_none</mat-icon>
             <!-- <span class="counter">{{filteredData.length}}</span> -->
           </button>
           <!-- Notification Menu Template -->
@@ -38,7 +38,7 @@
         </li>
         <li>
           <button mat-icon-button matTooltip="Fullscreen" (click)="toggleFullscreen()">
-            <mat-icon class="font-medium color-white">fullscreen</mat-icon>
+            <mat-icon class="font-mat-icon color-white">fullscreen</mat-icon>
           </button>
         </li>
         <li class="d-flex align-items-center">
