--- a/src/app/admin/categories/categories.component.html
+++ b/src/app/admin/categories/categories.component.html
@@ -19,8 +19,8 @@
           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
             <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>Start Date</mat-label>
-              <input matInput [matDatepicker]="startPicker" formControlName="categoryStartDate"
-                placeholder="Select start date">
+              <input matInput [matDatepicker]="startPicker" (focus)="startPicker.open()" (input)="startPicker.open()"
+                formControlName="categoryStartDate" placeholder="Select start date" readonly>
               <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
               <mat-datepicker #startPicker></mat-datepicker>
             </mat-form-field>
@@ -30,22 +30,13 @@
           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
             <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>End Date</mat-label>
-              <input matInput [matDatepicker]="endPicker" formControlName="categoryEndDate"
-                placeholder="Select end date">
+              <input matInput [matDatepicker]="endPicker" (focus)="endPicker.open()" (input)="endPicker.open()"
+                formControlName="categoryEndDate" placeholder="Select end date" readonly>
               <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
               <mat-datepicker #endPicker></mat-datepicker>
             </mat-form-field>
           </div>
         </div>
-
-        <!-- Category Search String -->
-        <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
-          <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>Category Search</mat-label>
-            <input matInput [formControl]="categorySearch" placeholder="Search category" (keyup)="searchCategories()">
-          </mat-form-field>
-        </div>
-
 
         <!-- Submit Button -->
         <div class="row px-3">
@@ -55,122 +46,135 @@
         </div>
       </form>
     </mat-card>
-    <div class="full-screen-container mat-elevation-z8 bgColor-transparent rounded h-100">
-      <!-- Mat Table Header Start -->
-      <mat-card-header class="position-relative d-flex align-items-center gap-3 p-3 rounded-top">
-        <mat-card-title class="m-0 ms-1 no-select d-flex align-items-center gap-3">
-          <span>Categories View</span>
-        </mat-card-title>
 
-        <ng-container>
+    <div class="full-screen-container mat-elevation-z8 bgColor-transparent rounded h-100">
+      <mat-card>
+        <!-- Mat Table Header Start -->
+        <mat-card-header class="position-relative d-flex align-items-center gap-3 p-3 rounded-top">
+          <!-- <mat-card-title class="m-0 ms-1 no-select d-flex align-items-center gap-3">
+            <span>Categories View</span>
+          </mat-card-title> -->
+
+          <!-- Category Search String -->
+          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
+            <mat-form-field appearance="outline" class="example-full-width custom-border">
+              <mat-label>Category Search</mat-label>
+              <input matInput [formControl]="categorySearch" placeholder="Search category" (keyup)="searchCategories()">
+            </mat-form-field>
+          </div>
+
           <ul class="d-flex ms-auto">
             <li>
               <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color p-3" matTooltip="Refresh"
                 (click)="refreshCategoryPage()">
-                <mat-icon class="font-medium">refresh</mat-icon>
+                <mat-icon class="font-mat-icon">refresh</mat-icon>
               </button>
             </li>
             <li>
 
               <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color p-3" matTooltip="Add Product"
                 (click)="addCategory()">
-                <mat-icon class="font-medium">add</mat-icon>
+                <mat-icon class="font-mat-icon">add</mat-icon>
               </button>
             </li>
           </ul>
-        </ng-container>
+        </mat-card-header>
+        <!-- Mat Table Header End -->
 
-        <hr class="position-absolute w-100 mb-0 start-0 bottom-0" />
-      </mat-card-header>
-      <!-- Mat Table Header End -->
+        <!-- Mat Table Start -->
+        <mat-card class="rounded-bottom" [style.border-radius]="0">
+          <div class="mat-elevation-z8 rounded">
+            <!-- Table -->
+            <mat-table #categoriesTable [dataSource]="categoriesTableDataSource" matSort
+              (matSortChange)="onCategoriesSortChange($event)">
 
-      <!-- Mat Table Start -->
-      <div class="mat-card bg-white rounded-bottom" [style.border-radius]="0">
-        <div class="mat-elevation-z8 rounded">
-          <mat-table #categoriesTable [dataSource]="categoriesTableDataSource" matSort
-            (matSortChange)="onCategoriesSortChange($event)">
+              <!-- Category Serial No Column -->
+              <ng-container matColumnDef="Sno">
+                <mat-header-cell *matHeaderCellDef class="tbl-first-col"> S.No </mat-header-cell>
+                <mat-cell *matCellDef="let category; let i = index" class="tbl-first-col"> {{ i + 1 }} </mat-cell>
+              </ng-container>
 
-            <!-- Category Serial No Column -->
-            <ng-container matColumnDef="Sno">
-              <mat-header-cell *matHeaderCellDef class="tbl-first-col"> S.No </mat-header-cell>
-              <mat-cell *matCellDef="let category; let i = index" class="tbl-first-col"> {{ i + 1 }} </mat-cell>
+              <!-- Category Name Column (sortable) -->
+              <ng-container matColumnDef="categoryName">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+                <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('categoryName', category)"> {{
+                  category.categoryName }} </mat-cell>
+              </ng-container>
+
+              <!-- Category Description Column (sortable) -->
+              <ng-container matColumnDef="categoryDescription">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Description </mat-header-cell>
+                <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('categoryDescription', category)"> {{
+                  category.categoryDescription }} </mat-cell>
+              </ng-container>
+
+              <!-- Category Sort Order Column (sortable) -->
+              <ng-container matColumnDef="sortOrder">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Sort Order </mat-header-cell>
+                <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('sortOrder', category)"> {{
+                  category.sortOrder }} </mat-cell>
+              </ng-container>
+
+              <!-- Category Image Column (not sortable) -->
+              <ng-container matColumnDef="categoryImage">
+                <mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
+                <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('categoryImage', category)">
+                  <img (click)="openImageDialog(category)" [src]="category.categoryImage" [alt]="category.categoryName"
+                    height="25em"
+                    onerror="this.onerror=null; this.src='https://via.placeholder.com/150?text=Category+Image';">
+                </mat-cell>
+              </ng-container>
+
+              <!-- Actions Column (not sortable) -->
+              <ng-container matColumnDef="actions">
+                <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+                <mat-cell *matCellDef="let category">
+                  <mat-card-actions class="p-0 m-0">
+                    <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color"
+                      matTooltip="Edit Category" (click)="editCategory(category)">
+                      <mat-icon class="font-xlarge" color="primary">edit</mat-icon>
+                    </button>
+                  </mat-card-actions>
+                  <mat-card-actions class="p-0 m-0">
+                    <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color"
+                      matTooltip="Delete Category" (click)="deleteCategory(category)">
+                      <mat-icon class="font-xlarge color-danger">delete</mat-icon>
+                    </button>
+                  </mat-card-actions>
+                </mat-cell>
+              </ng-container>
+
+              <!-- Header Row -->
+              <mat-header-row *matHeaderRowDef="categoriesColumns; sticky: true"></mat-header-row>
+              <!-- Data Rows -->
+              <mat-row *matRowDef="let row; columns: categoriesColumns;" matRipple [style.cursor]="'pointer'"></mat-row>
+            </mat-table>
+
+            <!-- Table Loader -->
+            <ng-container
+              *ngIf="categoriesTableDataSource.isTblLoading && categoriesTableDataSource.renderedData.length == 0">
+              <div class="text-center mt-1 d-flex justify-content-center">
+                <mat-spinner diameter="40"></mat-spinner>
+              </div>
             </ng-container>
 
-            <!-- Category Name Column (sortable) -->
-            <ng-container matColumnDef="categoryName">
-              <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-              <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('categoryName', category)"> {{
-                category.categoryName }} </mat-cell>
+            <!-- Table No Data Found Text -->
+            <ng-container
+              *ngIf="!categoriesTableDataSource.isTblLoading && categoriesTableDataSource.renderedData.length == 0">
+              <div class="text-center mt-1 no-select">
+                <span>No data found</span>
+              </div>
             </ng-container>
 
-            <!-- Category Description Column (sortable) -->
-            <ng-container matColumnDef="categoryDescription">
-              <mat-header-cell *matHeaderCellDef mat-sort-header> Description </mat-header-cell>
-              <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('categoryDescription', category)"> {{
-                category.categoryDescription }} </mat-cell>
-            </ng-container>
-
-            <!-- Category Sort Order Column (sortable) -->
-            <ng-container matColumnDef="sortOrder">
-              <mat-header-cell *matHeaderCellDef mat-sort-header> Sort Order </mat-header-cell>
-              <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('sortOrder', category)"> {{
-                category.sortOrder }} </mat-cell>
-            </ng-container>
-
-            <!-- Category Image Column (not sortable) -->
-            <ng-container matColumnDef="categoryImage">
-              <mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
-              <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('categoryImage', category)">
-                <img (click)="openImageDialog(category)" [src]="category.categoryImage" [alt]="category.categoryName"
-                  height="25em"
-                  onerror="this.onerror=null; this.src='https://via.placeholder.com/150?text=Category+Image';">
-              </mat-cell>
-            </ng-container>
-
-            <!-- Actions Column (not sortable) -->
-            <ng-container matColumnDef="actions">
-              <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-              <mat-cell *matCellDef="let category">
-                <mat-card-actions class="p-0 m-0">
-                  <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color" matTooltip="Edit Category"
-                    (click)="editCategory(category)">
-                    <mat-icon class="font-xlarge" color="primary">edit</mat-icon>
-                  </button>
-                </mat-card-actions>
-                <mat-card-actions class="p-0 m-0">
-                  <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color"
-                    matTooltip="Delete Category" (click)="deleteCategory(category)">
-                    <mat-icon class="font-xlarge color-danger">delete</mat-icon>
-                  </button>
-                </mat-card-actions>
-              </mat-cell>
-            </ng-container>
-
-            <!-- Header Row -->
-            <mat-header-row *matHeaderRowDef="categoriesColumns; sticky: true"></mat-header-row>
-            <!-- Data Rows -->
-            <mat-row *matRowDef="let row; columns: categoriesColumns;" matRipple [style.cursor]="'pointer'"></mat-row>
-          </mat-table>
-
-
-          <div *ngIf="categoriesTableDataSource.isTblLoading || categoriesTableDataSource.renderedData.length == 0"
-            class="text-center mt-2 d-flex justify-content-center">
-            <mat-spinner *ngIf="categoriesTableDataSource.isTblLoading" diameter="40"></mat-spinner>
+            <!-- Paginator -->
+            <mat-paginator class="rounded bgColor-transparent pb-3" #categoriesPaginator
+              [length]="categoriesTableDataSource.itemCount" [pageIndex]="0" [pageSize]="5"
+              (page)="pageCategoriesChange()" [pageSizeOptions]="[5, 10, 25]">
+            </mat-paginator>
           </div>
-
-          <div *ngIf="!categoriesTableDataSource.isTblLoading && categoriesTableDataSource.renderedData.length == 0"
-            class="text-center mt-2">
-            <span>No data found</span>
-          </div>
-
-          <!-- Paginator -->
-          <mat-paginator class="rounded bgColor-transparent pb-3" #categoriesPaginator
-            [length]="categoriesTableDataSource.itemCount" [pageIndex]="0" [pageSize]="5"
-            (page)="pageCategoriesChange()" [pageSizeOptions]="[5, 10, 25]">
-          </mat-paginator>
-        </div>
-      </div>
-      <!-- Mat Table End -->
+        </mat-card>
+        <!-- Mat Table End -->
+      </mat-card>
     </div>
   </mat-card>
 </section>
