--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -216,7 +216,7 @@
               <span *ngIf="isLoading" class="loading-text">Processing your registration<span class="dots"></span></span>
               <span *ngIf="!isLoading">Register</span>
             </button>
-            <a routerLink="/auth/signin" class="no-select-cursor anchor-hover">I Already have and account?</a>
+            <a routerLink="/auth/signin" class="no-select-cursor anchor-hover">I Already have an account?</a>
           </div>
 
         </form>
