--- a/src/app/admin/categories/categories.component.html
+++ b/src/app/admin/categories/categories.component.html
@@ -1,78 +1,96 @@
 <section>
   <app-page-toolbar [pageName]="'Categories'"></app-page-toolbar>
   <mat-card class="bgapp-secondary-color">
-    <mat-card class="rounded-top">
-      <form [formGroup]="categoryFilterForm" (ngSubmit)="onFilterSubmit()">
-        <div class="row">
-          <!-- Category Status -->
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
-            <mat-form-field appearance="outline" class="example-full-width">
-              <mat-label>Category Status</mat-label>
-              <mat-select formControlName="categoryStatus">
-                <mat-option [value]="'true'">Active</mat-option>
-                <mat-option [value]="'false'">Inactive</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
 
-          <!-- Start Date -->
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
-            <mat-form-field appearance="outline" class="example-full-width">
-              <mat-label>Start Date</mat-label>
-              <input matInput [matDatepicker]="startPicker" (focus)="startPicker.open()" (input)="startPicker.open()"
-                formControlName="categoryStartDate" placeholder="Select start date" readonly>
-              <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
-              <mat-datepicker #startPicker></mat-datepicker>
-            </mat-form-field>
-          </div>
+    <ng-container *ngIf="isfilterCategoriesHandler">
+      <mat-card class="rounded-top">
+        <form [formGroup]="categoryFilterForm">
+          <div class="row">
+            <!-- Category Status -->
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
+              <mat-form-field appearance="outline" class="example-full-width">
+                <mat-label>Category Status</mat-label>
+                <mat-select formControlName="categoryStatus" (selectionChange)="onFilterChange()">
+                  <mat-option [value]="'true'">Active</mat-option>
+                  <mat-option [value]="'false'">Inactive</mat-option>
+                </mat-select>
+              </mat-form-field>
+            </div>
 
-          <!-- End Date -->
-          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
-            <mat-form-field appearance="outline" class="example-full-width">
-              <mat-label>End Date</mat-label>
-              <input matInput [matDatepicker]="endPicker" (focus)="endPicker.open()" (input)="endPicker.open()"
-                formControlName="categoryEndDate" placeholder="Select end date" readonly>
-              <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
-              <mat-datepicker #endPicker></mat-datepicker>
-            </mat-form-field>
-          </div>
-        </div>
+            <!-- Start Date -->
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
+              <mat-form-field appearance="outline" class="example-full-width">
+                <mat-label>Start Date</mat-label>
+                <input matInput [matDatepicker]="startPicker" (focus)="startPicker.open()" (input)="startPicker.open()"
+                  formControlName="categoryStartDate" placeholder="Select start date" readonly
+                  (dateChange)="onFilterChange()">
+                <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
+                <mat-datepicker #startPicker></mat-datepicker>
+                <mat-error *ngIf="categoryFilterForm.get('categoryStartDate').hasError('invalidDateRange')">
+                  Start date must be earlier than end date.
+                </mat-error>
+              </mat-form-field>
+            </div>
 
-        <!-- Submit Button -->
-        <div class="row px-3">
-          <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1 p-0 ms-auto">
-            <button mat-raised-button color="primary" type="submit">Filter</button>
+            <!-- End Date -->
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
+              <mat-form-field appearance="outline" class="example-full-width">
+                <mat-label>End Date</mat-label>
+                <input matInput [matDatepicker]="endPicker" (focus)="endPicker.open()" (input)="endPicker.open()"
+                  formControlName="categoryEndDate" placeholder="Select end date" readonly
+                  (dateChange)="onFilterChange()">
+                <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
+                <mat-datepicker #endPicker></mat-datepicker>
+                <mat-error *ngIf="categoryFilterForm.get('categoryEndDate').hasError('invalidDateRange')">
+                  End date must be later than start date.
+                </mat-error>
+              </mat-form-field>
+            </div>
           </div>
-        </div>
-      </form>
-    </mat-card>
+        </form>
+      </mat-card>
+    </ng-container>
 
     <div class="full-screen-container mat-elevation-z8 bgColor-transparent rounded h-100">
       <mat-card>
         <!-- Mat Table Header Start -->
         <mat-card-header class="position-relative d-flex align-items-center gap-3 p-3 rounded-top">
-          <!-- <mat-card-title class="m-0 ms-1 no-select d-flex align-items-center gap-3">
+          <mat-card-title class="m-0 ms-1 no-select d-flex align-items-center gap-3">
             <span>Categories View</span>
-          </mat-card-title> -->
+          </mat-card-title>
 
           <!-- Category Search String -->
           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 pl-0 d-flex align-items-center justify-content-center">
             <mat-form-field appearance="outline" class="example-full-width custom-border">
               <mat-label>Category Search</mat-label>
-              <input matInput [formControl]="categorySearch" placeholder="Search category" (keyup)="searchCategories()">
+              <input matInput [formControl]="categorySearch" placeholder="Search category" (keyup)="onFilterChange()">
             </mat-form-field>
           </div>
 
-          <ul class="d-flex ms-auto">
+          <ul class="d-flex ms-auto gap-2">
             <li>
-              <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color p-3" matTooltip="Refresh"
+              <button mat-icon-button class="mat-custom-button app-secondary-color p-3"
+                matTooltip="See categories Logs">
+                <mat-icon class="font-mat-icon">history</mat-icon>
+              </button>
+            </li>
+
+            <li>
+              <button mat-icon-button class="mat-custom-button app-secondary-color p-3" matTooltip="Filter Categories"
+                (click)="isShowfilterCategory()">
+                <mat-icon class="font-mat-icon">filter_alt</mat-icon>
+              </button>
+            </li>
+
+            <li>
+              <button mat-icon-button class="mat-custom-button app-secondary-color p-3" matTooltip="Refresh"
                 (click)="refreshCategoryPage()">
                 <mat-icon class="font-mat-icon">refresh</mat-icon>
               </button>
             </li>
-            <li>
 
-              <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color p-3" matTooltip="Add Product"
+            <li>
+              <button mat-icon-button class="mat-custom-button app-secondary-color p-3" matTooltip="Add Category"
                 (click)="addCategory()">
                 <mat-icon class="font-mat-icon">add</mat-icon>
               </button>
@@ -82,100 +100,14 @@
         <!-- Mat Table Header End -->
 
         <!-- Mat Table Start -->
-        <mat-card class="rounded-bottom" [style.border-radius]="0">
-          <div class="mat-elevation-z8 rounded">
-            <!-- Table -->
-            <mat-table #categoriesTable [dataSource]="categoriesTableDataSource" matSort
-              (matSortChange)="onCategoriesSortChange($event)">
-
-              <!-- Category Serial No Column -->
-              <ng-container matColumnDef="Sno">
-                <mat-header-cell *matHeaderCellDef class="tbl-first-col"> S.No </mat-header-cell>
-                <mat-cell *matCellDef="let category; let i = index" class="tbl-first-col"> {{ i + 1 }} </mat-cell>
-              </ng-container>
-
-              <!-- Category Name Column (sortable) -->
-              <ng-container matColumnDef="categoryName">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-                <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('categoryName', category)"> {{
-                  category.categoryName }} </mat-cell>
-              </ng-container>
-
-              <!-- Category Description Column (sortable) -->
-              <ng-container matColumnDef="categoryDescription">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Description </mat-header-cell>
-                <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('categoryDescription', category)"> {{
-                  category.categoryDescription }} </mat-cell>
-              </ng-container>
-
-              <!-- Category Sort Order Column (sortable) -->
-              <ng-container matColumnDef="sortOrder">
-                <mat-header-cell *matHeaderCellDef mat-sort-header> Sort Order </mat-header-cell>
-                <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('sortOrder', category)"> {{
-                  category.sortOrder }} </mat-cell>
-              </ng-container>
-
-              <!-- Category Image Column (not sortable) -->
-              <ng-container matColumnDef="categoryImage">
-                <mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
-                <mat-cell *matCellDef="let category" (dblclick)="onRowDoubleClick('categoryImage', category)">
-                  <img (click)="openImageDialog(category)" [src]="category.categoryImage" [alt]="category.categoryName"
-                    height="25em"
-                    onerror="this.onerror=null; this.src='https://via.placeholder.com/150?text=Category+Image';">
-                </mat-cell>
-              </ng-container>
-
-              <!-- Actions Column (not sortable) -->
-              <ng-container matColumnDef="actions">
-                <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
-                <mat-cell *matCellDef="let category">
-                  <mat-card-actions class="p-0 m-0">
-                    <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color"
-                      matTooltip="Edit Category" (click)="editCategory(category)">
-                      <mat-icon class="font-xlarge" color="primary">edit</mat-icon>
-                    </button>
-                  </mat-card-actions>
-                  <mat-card-actions class="p-0 m-0">
-                    <button mat-icon-button class="mat-custom-button ms-1 app-secondary-color"
-                      matTooltip="Delete Category" (click)="deleteCategory(category)">
-                      <mat-icon class="font-xlarge color-danger">delete</mat-icon>
-                    </button>
-                  </mat-card-actions>
-                </mat-cell>
-              </ng-container>
-
-              <!-- Header Row -->
-              <mat-header-row *matHeaderRowDef="categoriesColumns; sticky: true"></mat-header-row>
-              <!-- Data Rows -->
-              <mat-row *matRowDef="let row; columns: categoriesColumns;" matRipple [style.cursor]="'pointer'"></mat-row>
-            </mat-table>
-
-            <!-- Table Loader -->
-            <ng-container
-              *ngIf="categoriesTableDataSource.isTblLoading && categoriesTableDataSource.renderedData.length == 0">
-              <div class="text-center mt-1 d-flex justify-content-center">
-                <mat-spinner diameter="40"></mat-spinner>
-              </div>
-            </ng-container>
-
-            <!-- Table No Data Found Text -->
-            <ng-container
-              *ngIf="!categoriesTableDataSource.isTblLoading && categoriesTableDataSource.renderedData.length == 0">
-              <div class="text-center mt-1 no-select">
-                <span>No data found</span>
-              </div>
-            </ng-container>
-
-            <!-- Paginator -->
-            <mat-paginator class="rounded bgColor-transparent pb-3" #categoriesPaginator
-              [length]="categoriesTableDataSource.itemCount" [pageIndex]="0" [pageSize]="5"
-              (page)="pageCategoriesChange()" [pageSizeOptions]="[5, 10, 25]">
-            </mat-paginator>
-          </div>
-        </mat-card>
-        <!-- Mat Table End -->
+        <mat-card-content>
+          <!-- Table -->
+          <app-dynamic-table [columns]="columns" [filterOptions]="filterOptions" [apiUrl]="'Category/getCategories'"
+            (onEdit)="handleEdit($event)" (onDelete)="handleDelete($event)" (onActive)="handleActive($event)">
+          </app-dynamic-table>
+        </mat-card-content>
       </mat-card>
     </div>
+    <!-- Mat Table End -->
   </mat-card>
 </section>
-<router-outlet></router-outlet>
