--- a/src/app/admin/categories/dialog/add-edit-category/add-edit-category.component.html
+++ b/src/app/admin/categories/dialog/add-edit-category/add-edit-category.component.html
@@ -1,59 +1,66 @@
 <mat-toolbar class="rounded">
-  <h5>{{ isEditMode ? 'Edit' : 'Add' }} Category</h5>
-</mat-toolbar>
-<div mat-dialog-content class="p-2">
-  <form #ngCategoryForm="ngForm" [formGroup]="categoryForm" (ngSubmit)="onSubmit()" class="row m-0 px-2">
-
-    <!-- Category Name -->
-    <div class="col-xs-12 col-md-12 col-lg-6 my-3">
-      <mat-form-field class="example-full-width field-theme-black">
-        <mat-label>Category Name</mat-label>
-        <input matInput id="categoryNameField" formControlName="categoryName" placeholder="Enter category name" />
-        <mat-error *ngIf="categoryForm.get('categoryName').hasError('required')">
-          Category name is required.
-        </mat-error>
-      </mat-form-field>
-    </div>
-
-    <!-- Category Description -->
-    <div class="col-xs-12 col-md-12 col-lg-6 my-3">
-      <mat-form-field class="example-full-width field-theme-black">
-        <mat-label>Category Description</mat-label>
-        <input matInput id="categoryDescriptionField" formControlName="categoryDescription" placeholder="Enter category description" />
-        <mat-error *ngIf="categoryForm.get('categoryDescription').hasError('required')">
-          Category description is required.
-        </mat-error>
-      </mat-form-field>
-    </div>
-
-    <!-- Category Image -->
-    <div class="col-xs-12 col-md-12 col-lg-6 my-3">
-      <mat-form-field class="example-full-width field-theme-black">
-        <mat-label>Select Category Image</mat-label>
-        <input matInput id="categoryImageField" readonly type="text" id="fakeFileInput" (click)="hiddenInput.click()" />
-        <input hidden type="file" accept="image/*" #hiddenInput (change)="GetFileOnLoad($event)" />
-        <mat-icon matSuffix (click)="hiddenInput.click()">folder_open</mat-icon>
-      </mat-form-field>
-    </div>
-
-    <!-- Display Order / Sort Order -->
-    <div class="col-xs-12 col-md-12 col-lg-6 my-3">
-      <mat-form-field class="example-full-width field-theme-black">
-        <mat-label>Display Order</mat-label>
-        <input matInput id="sortOrderField" type="number" formControlName="sortOrder" placeholder="Enter display order" />
-        <mat-error *ngIf="categoryForm.get('sortOrder').hasError('min')">
-          Display order must be greater than 0.
-        </mat-error>
-      </mat-form-field>
-    </div>
-
-    <mat-dialog-actions class="position-sticky bottom-0 mt-2">
-      <div class="dialog-actions col-xs-12 col-md-12 col-lg-12 text-end">
-        <button mat-button type="button" color="warn" (click)="onCancel()">Cancel</button>
-        <button mat-raised-button class="bgapp-secondary-color color-white" type="submit">
-          {{ isEditMode ? 'Update' : 'Add' }}
-        </button>
+    <h5>{{ isEditMode ? 'Edit' : 'Add' }} Category</h5>
+  </mat-toolbar>
+  <div mat-dialog-content class="p-2">
+    <form #ngCategoryForm="ngForm" [formGroup]="categoryForm" (ngSubmit)="onSubmit()" class="row m-0 px-2">
+  
+      <!-- Category Name -->
+      <div class="col-xs-12 col-md-12 col-lg-6 my-3">
+        <mat-form-field class="example-full-width field-theme-black">
+          <mat-label>Category Name</mat-label>
+          <input matInput id="categoryNameField" formControlName="categoryName" placeholder="Enter category name" [maxlength]="30" />
+          <mat-error *ngIf="categoryForm.get('categoryName').hasError('required')">
+            Category name is required.
+          </mat-error>
+        </mat-form-field>
       </div>
-    </mat-dialog-actions>
-  </form>
-</div>
+  
+      <!-- Category Description -->
+      <div class="col-xs-12 col-md-12 col-lg-6 my-3">
+        <mat-form-field class="example-full-width field-theme-black">
+          <mat-label>Category Description</mat-label>
+          <input matInput id="categoryDescriptionField" formControlName="categoryDescription" placeholder="Enter category description" [maxlength]="225" />
+          <mat-error *ngIf="categoryForm.get('categoryDescription').hasError('required')">
+            Category description is required.
+          </mat-error>
+        </mat-form-field>
+      </div>
+  
+      <!-- Category Image -->
+      <div class="col-xs-12 col-md-12 col-lg-6 my-3">
+        <mat-form-field class="example-full-width field-theme-black">
+          <mat-label>Select Category Image</mat-label>
+          <input matInput formControlName="categoryImageHidden" id="categoryImageField" type="text" readonly (click)="hiddenInput.click()" [required]="categoryForm.get('categoryImage').invalid" />
+          <input hidden type="file" accept="image/*" #hiddenInput (change)="GetFileOnLoad($event)" />
+          <mat-icon matSuffix (click)="hiddenInput.click()">folder_open</mat-icon>
+          <mat-error *ngIf="categoryForm.get('categoryImage').hasError('required')">
+            Category Image must be selected.
+          </mat-error>
+        </mat-form-field>
+      </div>
+  
+      <!-- Display Order / Sort Order -->
+      <div class="col-xs-12 col-md-12 col-lg-6 my-3">
+        <mat-form-field class="example-full-width field-theme-black">
+          <mat-label>Display Order</mat-label>
+          <input matInput id="sortOrderField" type="number" formControlName="sortOrder" appMinMaxValue [min]="1" [max]="50" placeholder="Enter display order" />
+          <mat-error *ngIf="categoryForm.get('sortOrder').hasError('required')">
+            Display order is required.
+          </mat-error>
+          <mat-error *ngIf="categoryForm.get('sortOrder').hasError('min')">
+            Display order must be greater than 0.
+          </mat-error>
+        </mat-form-field>
+      </div>
+  
+      <mat-dialog-actions class="position-sticky bottom-0 mt-2">
+        <div class="dialog-actions col-xs-12 col-md-12 col-lg-12 text-end">
+          <button mat-raised-button type="button" color="warn" (click)="onCancel()">Cancel</button>
+          <button mat-raised-button class="bgapp-secondary-color color-white" type="submit">
+            {{ isEditMode ? 'Update' : 'Add' }}
+          </button>
+        </div>
+      </mat-dialog-actions>
+    </form>
+  </div>
+  
