--- a/src/app/shared/dashboard/sidebar/sidebar.component.html
+++ b/src/app/shared/dashboard/sidebar/sidebar.component.html
@@ -1,50 +1,48 @@
 <!-- SIDEBAR SECTION STARTS HERE -->
-<aside>
-  <div class="sidebar" id="side" [ngClass]="status ? 'open' : ''">
-    <div class="logo">
-      <a href=""><img src="/assets/images/logo/Decor-Vista.png" alt="logo-image"></a>
-      <img class="no-select" src="/assets/images/brands/bar.png" alt="menu-toggle" (click)="clickEvent()">
-    </div>
+<aside class="sidebar" [ngClass]="status ? 'open' : ''">
+  <div class="logo">
+    <a href=""><img src="/assets/images/logo/Decor-Vista.png" alt="logo-image"></a>
+    <img class="no-select" src="/assets/images/brands/bar.png" alt="menu-toggle" (click)="clickEvent()">
+  </div>
 
-    <ul class="nav_links">
-      <li *ngFor="let item of permissions; let i = index"
-          (click)="!status && item.SubMenus.length > 0 ? clickEvent() : (item.SubMenus.length > 0 ? toggleSubMenu(i) : null)">
-        <a class="btns" [routerLink]="item.MenuUrl || ''" [routerLinkActive]="['active']"
-          [routerLinkActiveOptions]="{ exact: true }">
-          <mat-icon class="no-cursor">{{item.MenuIcon}}</mat-icon>
-          <span class="links no-cursor">{{item.MenuName}}</span>
+  <ul class="nav_links">
+    <li *ngFor="let item of permissions; let i = index"
+      (click)="!status && item.SubMenus.length > 0 ? clickEvent() : (item.SubMenus.length > 0 ? toggleSubMenu(i) : null)">
+      <a class="btns" [routerLink]="item.MenuUrl || ''" [routerLinkActive]="['active']"
+        [routerLinkActiveOptions]="{ exact: true }">
+        <mat-icon class="no-cursor">{{item.MenuIcon}}</mat-icon>
+        <span class="links no-cursor">{{item.MenuName}}</span>
 
-          <mat-icon class="ms-auto no-cursor" *ngIf="item.SubMenus.length > 0">
-            {{ expandedStates[i] ? 'remove' : 'add' }}
-          </mat-icon>
-        </a>
+        <mat-icon class="ms-auto no-cursor" *ngIf="item.SubMenus.length > 0">
+          {{ expandedStates[i] ? 'remove' : 'add' }}
+        </mat-icon>
+      </a>
 
-        <ul class="subMenus" *ngIf="item.SubMenus.length > 0" [ngClass]="{'collapsed': !expandedStates[i]}">
-          <li *ngFor="let subItem of item.SubMenus">
-            <a [routerLink]="subItem.SubMenuUrl" [routerLinkActive]="['active']"
-              [routerLinkActiveOptions]="{ exact: true }">
-              <mat-icon class="no-cursor">{{subItem.SubMenuIcon}}</mat-icon>
-              <span class="links no-cursor">{{subItem.SubMenuName}}</span>
-            </a>
-          </li>
-        </ul>
+      <ul class="subMenus" *ngIf="item.SubMenus.length > 0" [ngClass]="{'collapsed': !expandedStates[i]}">
+        <li *ngFor="let subItem of item.SubMenus">
+          <a [routerLink]="subItem.SubMenuUrl" [routerLinkActive]="['active']"
+            [routerLinkActiveOptions]="{ exact: true }">
+            <mat-icon class="no-cursor">{{subItem.SubMenuIcon}}</mat-icon>
+            <span class="links no-cursor">{{subItem.SubMenuName}}</span>
+          </a>
+        </li>
+      </ul>
 
-        <span class="close_links no-select">{{item.MenuName}}</span>
-      </li>
+      <span class="close_links no-select">{{item.MenuName}}</span>
+    </li>
 
-      <!-- Profile Section -->
-      <li class="profile d-flex align-items-center">
-        <div class="profile_desc">
-          <div class="name_portal">
-            <div class="name no-select">
-              {{ loginUser?.userFirstName | capitalize }} {{ loginUser?.userLastName | capitalize }}
-            </div>
+    <!-- Profile Section -->
+    <li class="profile d-flex align-items-center">
+      <div class="profile_desc">
+        <div class="name_portal">
+          <div class="name no-select">
+            {{ loginUser?.userFirstName | capitalize }} {{ loginUser?.userLastName | capitalize }}
           </div>
         </div>
+      </div>
 
-        <mat-icon class="color-white log_out cursor-pointer ms-auto" (click)="logout()">logout</mat-icon>
-      </li>
-    </ul>
-  </div>
+      <mat-icon class="color-white log_out cursor-pointer ms-auto" (click)="logout()">logout</mat-icon>
+    </li>
+  </ul>
 </aside>
 <!-- SIDEBAR SECTION ENd -->
