--- a/src/styles.css
+++ b/src/styles.css
@@ -285,7 +285,7 @@ img {
 }
 
 .auth-wrapper .container {
-  margin-top: 10rem;
+  margin-top: 8.5rem;
 }
 
 .auth-wrapper .logo {
@@ -386,6 +386,11 @@ img {
   background: var(--color-white) !important;
   box-shadow: inset rgb(0 0 0 / 9%) 0px 0px 3px 1px;
   border: 2px dotted var(--app-secondary-color);
+  overflow: hidden;
+}
+
+.mat-card>:first-child, .mat-card-content>:first-child {
+  z-index: 1;
 }
 
 .mat-card-content>:last-child:not(.mat-card-footer) {
@@ -493,12 +498,12 @@ form .anchor-button {
 .field-theme-black .mat-form-field-label,
 .field-theme-black .mat-form-field-prefix .mat-icon,
 .field-theme-black .mat-form-field-suffix .mat-icon {
-  color: var(--color-darker);
+  color: var(--color-lighter);
 }
 
 .field-theme-black .mat-form-field-ripple,
 .field-theme-black .mat-form-field-underline {
-  background-color: var(--color-darker) !important;
+  background-color: var(--color-lighter) !important;
 }
 
 .mat-form-field.mat-focused:not(.ng-invalid) .mat-form-field-outline,
@@ -590,9 +595,14 @@ form .anchor-button {
 }
 
 .mat-form-field-appearance-outline .mat-input-element,
-.field-theme-black .mat-input-element {
+.field-theme-black .mat-input-element,
+.field-theme-black input:-webkit-autofill, 
+.field-theme-black input:hover, 
+.field-theme-black input:focus, 
+.field-theme-black input:active {
   color: var(--color-darker) !important;
   caret-color: var(--color-darker);
+  -webkit-text-fill-color: var(--color-darker) !important;
 }
 
 .mat-form-field .mat-form-field-infix .mat-select-value,
@@ -654,6 +664,24 @@ form .anchor-button {
   border-radius: 0 28px 28px 0 !important;
   min-width: 28px !important;
 }
+
+.mat-form-field.custom-border.mat-focused:not(.ng-invalid) .mat-form-field-label,
+.mat-form-field.custom-border.mat-form-field-should-float:not(.ng-invalid) .mat-form-field-label {
+  transform: translate(1.3em, -0.8em) scale(0.75) !important;
+}
+
+.mat-form-field .mat-form-field-infix {
+  border-top: 0 !important;
+}
+
+.mat-form-field .mat-button-ripple.mat-ripple,
+.mat-form-field .mat-button-focus-overlay {
+  top: 50% !important;
+  left: 50% !important;
+  width: 30px !important;
+  height: 30px !important;
+  transform: translate(-50%, -50%);
+}
 /* mat select */
 .mat-option.mat-selected::after {
   content: '✔';
@@ -668,6 +696,20 @@ form .anchor-button {
   font-size: 0.9em !important;
   line-height: 3em !important;
   height: 2.5em !important;
+}
+
+.mat-calendar-body-selected {
+  background-color: var(--app-secondary-color);
+}
+
+.mat-form-field.mat-form-field-can-float .mat-datepicker-toggle-active,
+.mat-datepicker-toggle-active {
+  color: var(--app-secondary-color) !important;
+}
+
+.mat-form-field-appearance-outline .mat-form-field-subscript-wrapper {
+  padding: 0 0.5em !important;
+  top: 3em;
 }
 /* mat form field classes end here */
 
@@ -718,7 +760,7 @@ form .anchor-button {
 /* mat toggle classes start here */
 .mat-slide-toggle.mat-checked .mat-slide-toggle-bar,
 .mat-slide-toggle.mat-checked .mat-ripple-element {
-  background-color: var(--app-secondary-theme) !important;
+  background-color: var(--app-secondary-color) !important;
 }
 
 .mat-slide-toggle.mat-checked .mat-slide-toggle-thumb {
@@ -726,7 +768,7 @@ form .anchor-button {
 }
 
 .mat-slide-toggle {
-  height: 1.3em !important;
+  height: 1.2rem !important;
 }
 
 .mat-slide-toggle *:not(.mat-slide-toggle-ripple) {
@@ -806,80 +848,400 @@ form .anchor-button {
   border-bottom: none !important;
 } */
 
+.mat-table-column-width-1 {
+  max-width: 1%;
+}
+
+.mat-table-column-width-2 {
+  max-width: 2%;
+}
+
+.mat-table-column-width-3 {
+  max-width: 3%;
+}
+
+.mat-table-column-width-4 {
+  max-width: 4%;
+}
+
 .mat-table-column-width-5 {
   max-width: 5%;
+}
+
+.mat-table-column-width-6 {
+  max-width: 6%;
+}
+
+.mat-table-column-width-7 {
+  max-width: 7%;
+}
+
+.mat-table-column-width-8 {
+  max-width: 8%;
+}
+
+.mat-table-column-width-9 {
+  max-width: 9%;
 }
 
 .mat-table-column-width-10 {
   max-width: 10%;
 }
 
+.mat-table-column-width-11 {
+  max-width: 11%;
+}
+
+.mat-table-column-width-12 {
+  max-width: 12%;
+}
+
+.mat-table-column-width-13 {
+  max-width: 13%;
+}
+
+.mat-table-column-width-14 {
+  max-width: 14%;
+}
+
 .mat-table-column-width-15 {
   max-width: 15%;
+}
+
+.mat-table-column-width-16 {
+  max-width: 16%;
+}
+
+.mat-table-column-width-17 {
+  max-width: 17%;
+}
+
+.mat-table-column-width-18 {
+  max-width: 18%;
+}
+
+.mat-table-column-width-19 {
+  max-width: 19%;
 }
 
 .mat-table-column-width-20 {
   max-width: 20%;
 }
 
+.mat-table-column-width-21 {
+  max-width: 21%;
+}
+
+.mat-table-column-width-22 {
+  max-width: 22%;
+}
+
+.mat-table-column-width-23 {
+  max-width: 23%;
+}
+
+.mat-table-column-width-24 {
+  max-width: 24%;
+}
+
 .mat-table-column-width-25 {
   max-width: 25%;
+}
+
+.mat-table-column-width-26 {
+  max-width: 26%;
+}
+
+.mat-table-column-width-27 {
+  max-width: 27%;
+}
+
+.mat-table-column-width-28 {
+  max-width: 28%;
+}
+
+.mat-table-column-width-29 {
+  max-width: 29%;
 }
 
 .mat-table-column-width-30 {
   max-width: 30%;
 }
 
+.mat-table-column-width-31 {
+  max-width: 31%;
+}
+
+.mat-table-column-width-32 {
+  max-width: 32%;
+}
+
+.mat-table-column-width-33 {
+  max-width: 33%;
+}
+
+.mat-table-column-width-34 {
+  max-width: 34%;
+}
+
 .mat-table-column-width-35 {
   max-width: 35%;
+}
+
+.mat-table-column-width-36 {
+  max-width: 36%;
+}
+
+.mat-table-column-width-37 {
+  max-width: 37%;
+}
+
+.mat-table-column-width-38 {
+  max-width: 38%;
+}
+
+.mat-table-column-width-39 {
+  max-width: 39%;
 }
 
 .mat-table-column-width-40 {
   max-width: 40%;
 }
 
+.mat-table-column-width-41 {
+  max-width: 41%;
+}
+
+.mat-table-column-width-42 {
+  max-width: 42%;
+}
+
+.mat-table-column-width-43 {
+  max-width: 43%;
+}
+
+.mat-table-column-width-44 {
+  max-width: 44%;
+}
+
 .mat-table-column-width-45 {
   max-width: 45%;
+}
+
+.mat-table-column-width-46 {
+  max-width: 46%;
+}
+
+.mat-table-column-width-47 {
+  max-width: 47%;
+}
+
+.mat-table-column-width-48 {
+  max-width: 48%;
+}
+
+.mat-table-column-width-49 {
+  max-width: 49%;
 }
 
 .mat-table-column-width-50 {
   max-width: 50%;
 }
 
+.mat-table-column-width-51 {
+  max-width: 51%;
+}
+
+.mat-table-column-width-52 {
+  max-width: 52%;
+}
+
+.mat-table-column-width-53 {
+  max-width: 53%;
+}
+
+.mat-table-column-width-54 {
+  max-width: 54%;
+}
+
 .mat-table-column-width-55 {
   max-width: 55%;
+}
+
+.mat-table-column-width-56 {
+  max-width: 56%;
+}
+
+.mat-table-column-width-57 {
+  max-width: 57%;
+}
+
+.mat-table-column-width-58 {
+  max-width: 58%;
+}
+
+.mat-table-column-width-59 {
+  max-width: 59%;
 }
 
 .mat-table-column-width-60 {
   max-width: 60%;
 }
 
+.mat-table-column-width-61 {
+  max-width: 61%;
+}
+
+.mat-table-column-width-62 {
+  max-width: 62%;
+}
+
+.mat-table-column-width-63 {
+  max-width: 63%;
+}
+
+.mat-table-column-width-64 {
+  max-width: 64%;
+}
+
 .mat-table-column-width-65 {
   max-width: 65%;
+}
+
+.mat-table-column-width-66 {
+  max-width: 66%;
+}
+
+.mat-table-column-width-67 {
+  max-width: 67%;
+}
+
+.mat-table-column-width-68 {
+  max-width: 68%;
+}
+
+.mat-table-column-width-69 {
+  max-width: 69%;
 }
 
 .mat-table-column-width-70 {
   max-width: 70%;
 }
 
+.mat-table-column-width-71 {
+  max-width: 71%;
+}
+
+.mat-table-column-width-72 {
+  max-width: 72%;
+}
+
+.mat-table-column-width-73 {
+  max-width: 73%;
+}
+
+.mat-table-column-width-74 {
+  max-width: 74%;
+}
+
 .mat-table-column-width-75 {
   max-width: 75%;
+}
+
+.mat-table-column-width-76 {
+  max-width: 76%;
+}
+
+.mat-table-column-width-77 {
+  max-width: 77%;
+}
+
+.mat-table-column-width-78 {
+  max-width: 78%;
+}
+
+.mat-table-column-width-79 {
+  max-width: 79%;
 }
 
 .mat-table-column-width-80 {
   max-width: 80%;
 }
 
+.mat-table-column-width-81 {
+  max-width: 81%;
+}
+
+.mat-table-column-width-82 {
+  max-width: 82%;
+}
+
+.mat-table-column-width-83 {
+  max-width: 83%;
+}
+
+.mat-table-column-width-84 {
+  max-width: 84%;
+}
+
 .mat-table-column-width-85 {
   max-width: 85%;
+}
+
+.mat-table-column-width-86 {
+  max-width: 86%;
+}
+
+.mat-table-column-width-87 {
+  max-width: 87%;
+}
+
+.mat-table-column-width-88 {
+  max-width: 88%;
+}
+
+.mat-table-column-width-89 {
+  max-width: 89%;
 }
 
 .mat-table-column-width-90 {
   max-width: 90%;
 }
 
+.mat-table-column-width-91 {
+  max-width: 91%;
+}
+
+.mat-table-column-width-92 {
+  max-width: 92%;
+}
+
+.mat-table-column-width-93 {
+  max-width: 93%;
+}
+
+.mat-table-column-width-94 {
+  max-width: 94%;
+}
+
 .mat-table-column-width-95 {
   max-width: 95%;
+}
+
+.mat-table-column-width-96 {
+  max-width: 96%;
+}
+
+.mat-table-column-width-97 {
+  max-width: 97%;
+}
+
+.mat-table-column-width-98 {
+  max-width: 98%;
+}
+
+.mat-table-column-width-99 {
+  max-width: 99%;
 }
 
 .mat-table-column-width-100 {
@@ -1058,10 +1420,6 @@ form .anchor-button {
 .mat-raised-button,
 .mat-warn {
   min-width: 100px !important;
-}
-
-.mat-warn {
-  background: #ececec !important;
 }
 /* mat actions button classes end here */
 
